tests/samples/invalid/invalid_escape.pn
fn foo()
{
	var x = "Is \z a valid escape?";
}
